# cpGrader

./: .gitignore  Cargo.toml  README.md  config.toml  dockerfile  grade.csv  grade.csv.backup  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
examples/: README.md
examples/2023-cp1-fin/: config.toml  main.py
examples/2023-cp1-fin/correct/: DefaultCase.txt  Makefile  fin03.c  firewall.c  firewall.h
examples/2023-cp1-hw01/: config.toml  main.py
examples/2023-cp1-hw02/: config.toml  main.py
examples/2023-cp1-hw02/correct/: Makefile  case1.txt  case2.txt  case3.txt  case4.txt  case5.txt  case6.txt  case7.txt  hw0204.c
examples/2023-cp1-hw02/testcase/: 1.in  2.in  3.in  4.in  5.in  6.in  7.in
examples/2023-cp1-hw03/: config.toml  main.py
examples/2023-cp1-hw03/correct/: Makefile  case1.txt  case10.txt  case2.txt  case3.txt  case4.txt  case5.txt  case6.txt  case7.txt  case8.txt  case9.txt  hw0303.c
examples/2023-cp1-hw04/: config.toml  main.py
examples/2023-cp1-hw05/: config.toml  main.py
examples/2023-cp1-mid/: config.toml  main.py
examples/2024-cp2-fin/: config.toml  main.py
examples/2024-cp2-hw01/: config.toml  main.py
examples/2024-cp2-hw02/: config.toml  main.py
examples/2024-cp2-hw03/: config.toml  main.py
examples/2024-cp2-hw04/: main.py
examples/2024-cp2-mid/: config.toml  main.py
src/: build.rs  clean.rs  config.rs  grader.rs  load.rs  log.rs  main.rs  student.rs  utils.rs
src/cpGrader/: __init__.py  config.py  cpGrader.py  testcase.py  utils.py
tests/: test_examples.py
(+106 files in other folders)
