[package]
name = "cpgrader-rs"
version = "0.1.0"
edition = "2021"


authors = ["Your Name <your.email@example.com>"]
description = "A command line tool to grade student assignments"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
csv = "1.3.0"
regex = "1.11.1"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
zip = "2.2.0"
