[project.urls]
homepage = "https://github.com/ryanlinjui/cpGrader"

[tool.poetry]
name = "cpGrader"
version = "0.1.4"
description = "A Python Package to Grade Programming Assignments Automatically."
authors = ["ryanlinjui <ryanlinjui@gmail.com>"]
readme = "README.md"
packages = [{include = "cpGrader", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pexpect = "^4.9.0"
toml = "^0.10.2"
objprint = "^0.2.3"

[tool.poetry.group.dev.dependencies]
sympy = "^1.12"
pytest = "^8.3.2"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]